# Live-MR-Manager-Mod

./: .gitignore  DISCORD_ANNOUNCEMENTS.md  README.md  RELEASE_NOTES.md  ToDo.md  UserManual.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  meloming_integration.yml
.github/workflows/: discord-release.yml  release.yml
docs/: CUSTOM_MODELS.md  DEREVERB.md  DISCORD_SETUP.md  GENRE_CATEGORY_STANDARD.md  GPU_ACCELERATION.md  MELOMING_SONGBOOK_INTEGRATION.md
scripts/: convert_dereverb_onnx.py  dev-server.mjs  discord_release_announce.py  probe_meloming_create.py  test_meloming_push.py  verify_dereverb_onnx.py
src/: index.html  lyrics-view.html  main.js  overlay-info.html  overlay-lyrics.html  style.css
src-tauri/: .env.example  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  lyrics-hover.json
src-tauri/examples/: bench_ep.rs
src-tauri/scripts/: check_secret_sync.py
src-tauri/src/: alignment.rs  audio_commands.rs  audio_player.rs  custom_models.rs  dereverb.rs  ffmpeg_tools.rs  gpu_pack.rs  key_bpm.rs  lib.rs  library.rs  model_commands.rs  model_manager.rs  mr_cache.rs  mr_encode.rs  onnx_engine.rs  overlay_server.rs  playlists.rs  search.rs  spreadsheet.rs  state.rs  system.rs  title_parser.rs  types.rs  updater.rs  vocal_remover.rs  youtube.rs  youtube_url.rs
src-tauri/src/meloming/: client.rs  commands.rs  mod.rs  oauth.rs  push.rs  resolve.rs  settings.rs  sync.rs
src-tauri/src/separation/: mod.rs  task.rs
src/js/: alignment-model.js  alignment-queue.js  alignment-viewer.js  app-context.js  audio-devices.js  audio.js  companion-links.js  dereverb.js  library-filters.js  lrc-parser.js  lyric-drawer.js  lyrics.js  model-api.js  model-catalog.js  overlay-api.js  player.js  playlists.js  separation-mode-modal.js  settings-api.js  state.js  sync-data.js  tauri-bridge.js  taxonomy.js  track-mixer.js  update-check.js  utils.js  youtube-utils.js
src/js/events/: backend.js  controls.js  index.js  meloming.js  modals.js  navigation.js
src/styles/: alignment.css  base.css  layout.css  library-common.css  lyric-drawer.css  modals.css  notifications.css  overlay-settings.css  pages.css  player.css
tests/: alignment-model.test.js  alignment-queue.test.js  library-filters.test.js  parse-lrc.test.js  sync-data.test.js  taxonomy.test.js  youtube-utils.test.js
web/companion/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+46 files in other folders)
