[package]
name = "tauri-app"
version = "0.4.14"
description = "Live MR Manager"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1.3"
url = "2"
sha2 = "0.10"
getrandom = "0.2"
bytes = "1"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.22.2", features = ["symphonia-all"] }
signalsmith-stretch = "0.1.3"
symphonia = { version = "0.5.5", features = ["all"] }
once_cell = "1.21.4"
parking_lot = "0.12.5"
cpal = "0.17.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ndarray = "0.17"
rubato = "0.16.0"
rustfft = "6.2.0"
num-complex = "0.4"
hound = "3.5.1"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
log = "0.4"
env_logger = "0.10"
rayon = "1.10"
rusqlite = { version = "0.32.1", features = ["bundled"] }
id3 = "1.16.2"
rfd = "0.14"
regex = "1.11"
dotenvy = "0.15"
unicode-normalization = "0.1.24"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
tokio-tungstenite = "0.21"
base64 = "0.22"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
csv = "1.3"
calamine = "0.26"
semver = "1"


# Enable optimizations in dev mode for AI/DSP performance
[profile.dev]
incremental = false

# Do not optimize EVERYTHING, only math/audio core libraries
[profile.dev.package.ort]
opt-level = 3
[profile.dev.package.signalsmith-stretch]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.ndarray]
opt-level = 3
[profile.dev.package.rubato]
opt-level = 3
[profile.dev.package.symphonia]
opt-level = 3

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["api-24", "ndarray", "directml"] }
